# modelweightvis

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: args.rs  cka.rs  colormap.rs  data.rs  diff.rs  finetune.rs  format_plugin.rs  hooks.rs  layout.rs  leaf.rs  lib.rs  main.rs  single_arch.rs
src/format/: dtype.rs  gguf.rs  mod.rs  moe.rs  name_map.rs  pickle.rs  safetensors.rs  types.rs
src/layout/: arch.rs  arch_volume.rs  bin_pack.rs  mod.rs  model_config.rs  name_tree.rs  render.rs
src/probe/: common.rs  mixtral.rs  mod.rs  probe_default.txt  qwen2_moe.rs  text.rs
src/tiled/: arch_voxel.rs  leaf_arch.rs  mod.rs
