[package]
name = "modelweightvis"
version = "0.1.0"
edition = "2021"
description = "Tensor-format-aware visualization built on arbvis"

[dependencies]
# arbvis core. Pinned to a specific commit on znation/arbvis. Bump the
# `rev` when picking up arbvis changes. For local co-development against
# a sibling arbvis checkout, add a `[patch]` block in `.cargo/config.toml`
# (gitignored) — see README's "Local arbvis co-development" section.
arbvis = { git = "https://github.com/znation/arbvis", rev = "68f8c8981125861a866e8f68261bdfc49e517aec" }
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
log = "0.4"
tokio = { version = "1", features = ["full"] }
# CPU-side parallelism for the per-pair CKA compute in `--moe-cka`. The
# crate is already in `Cargo.lock` as a transitive dep of candle/image;
# the direct entry lets the new `cka` module use it without a feature
# flag dance.
rayon = "1"
# HF tokenizers — for `--probe`, converts probe text to token IDs via the
# model's `tokenizer.json` sidecar. Already in `Cargo.lock` transitively;
# the direct dep lets `src/probe/text.rs` use it.
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
# `candle-nn` provides the transformer primitives (Embedding, Linear,
# RmsNorm, rotary helpers) that `src/probe/*` builds the routing-faithful
# forward pass on top of, without depending on `candle-transformers`'
# sealed Model structs.
candle-nn = { version = "0.10", default-features = false }
# `--probe-url` HTTPS fetching reuses the existing `reqwest` entry below
# (originally pulled in for HF Hub API calls). The shared dep stays at
# 0.13 with `["json"]` features.

# Tensor-format parsing + dtype decode. Moved here from arbvis as part of
# the workspace split: arbvis is byte-only, modelweightvis owns everything
# tensor-aware (and the heavy deps that come with it).
half = "2"
# Used by `layout::name_tree` to classify tensor names into transformer
# blocks (`model.layers.N.q_proj.weight` → layer N, q_proj sub-path).
regex = "1"
# GGUF + PyTorch pickle support. See arbvis's pre-split history for the
# rationale comments — only `quantized::gguf_file`, `quantized::k_quants`,
# and `pickle` modules are touched; no GPU features enabled.
candle-core = { version = "0.10", default-features = false }
# PyTorch `.bin` / `.pth` / `.pt` zip-entry byte-range resolution.
zip = { version = "7.2", default-features = false }

# Shared deps re-imported here so the moved files compile without
# threading them through arbvis.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
indicatif = "0.17"
memmap2 = "0.9"
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
tempfile = "3"
